--- a/public/style.css
+++ b/public/style.css
@@ -92,8 +92,9 @@ div{
   display: inline-block;
   vertical-align: top;
   text-align: center;
-  margin: 1%;
-  padding: 1em;}
+  box-sizing: content-box;
+  margin: 0.5em;
+  padding: 0.5em;
 
 .footer{
   margin-top: 2em;
