--- a/public/style.css
+++ b/public/style.css
@@ -9,6 +9,10 @@
        url('ttf/FiraCode-Light.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;}
+
+h1 {
+  font-size: 5vw;
+}
 div{
   border: 1em ;
   padding: 1%;
